Visualize magnitudes of some notes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ authors = ["shybyte@gmail.com"]
 [dependencies]
 rustfft = "2.0.0"
 goertzel = "0.2.0"
+pitch_calc = "0.11.1"
+lazy_static = "1.0.0"
 
 [dev-dependencies]
 sdl2 = "0.31.0"
