--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ lazy_static = "1.0.0"
 
 [dev-dependencies]
 sdl2 = "0.31.0"
+hound = "3.3.0"
 #sdl2 = { git = "https://github.com/shybyte/rust-sdl2", branch = "audio-capture-2", features=["ttf"] }
 
 
